--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,4 +13,6 @@
     <color name="blue">#03A9F4</color>
     <color name="blueDark">#056B9A</color>
     <color name="grayscale">#808080</color>
+    <color name="status_bar_light">#FFea80fc</color>
+    <color name="status_bar_dark">#FF263238</color>
 </resources>
