--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -2,9 +2,10 @@
     <!-- Base application theme. -->
     <style name="Theme.Finalproject" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
+        <item name="colorPrimary">@color/black</item>
+        <item name="colorPrimaryDark">@color/status_bar_dark</item>
         <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimaryVariant">@color/status_bar_dark</item>
         <!-- Customize your theme here. -->
     </style>
 
