terlalu banyak yang diubah dan ditambah

--- a/app/src/main/res/layout/fragment_ticket.xml
+++ b/app/src/main/res/layout/fragment_ticket.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ui.TicketFragment">
+    tools:context=".activity.ui.TicketFragment"
+    android:layout_marginTop="8dp">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
