--- a/app/src/main/res/layout/ticket_list.xml
+++ b/app/src/main/res/layout/ticket_list.xml
@@ -1,45 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
         app:cardCornerRadius="10dp">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_margin="10dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/txtKodeBus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Kode Bus"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:textStyle="bold"
+                    android:textSize="18dp"/>
+                <TextView
+                    android:id="@+id/txtFare"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Fare"
+                    android:gravity="right"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:textSize="16dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
+                <TextView
+                    android:id="@+id/txtTripDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Trip Date"
+                    android:gravity="left"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/txtAvailableSeats"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="1 kursi"
+                    android:layout_weight="1"
+                    android:gravity="right"/>
+            </LinearLayout>
             <TextView
                 android:id="@+id/txtNamaBus"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Nama Bus"/>
-            <TextView
-                android:id="@+id/txtKodeBus"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Kode Bus"/>
-            <TextView
-                android:id="@+id/txtFrom"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Dari Mana"/>
-            <TextView
-                android:id="@+id/txtTo"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Ke mana"/>
-            <TextView
-                android:id="@+id/txtTripDate"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Trip Date"/>
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/txtFrom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Dari Mana"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:text=">"/>
+                <TextView
+                    android:id="@+id/txtTo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ke mana"/>
+            </LinearLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 </LinearLayout>
