--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -96,7 +96,8 @@
                 android:drawableLeft="@drawable/ic_baseline_local_phone"
                 android:drawableTint="@color/black"
                 android:drawablePadding="10sp"
-                android:hint="Mobile Number"/>
+                android:hint="Mobile Number"
+                android:inputType="number"/>
         </com.google.android.material.textfield.TextInputLayout>
         <Button
             android:layout_width="match_parent"
