--- a/app/src/main/res/layout/activity_trip_schedule.xml
+++ b/app/src/main/res/layout/activity_trip_schedule.xml
@@ -12,7 +12,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/listTripSchedule"
         android:scrollbars="vertical"
-        android:background="@android:color/transparent"/>
+        android:background="@android:color/transparent"
+        android:layout_marginTop="8dp"/>
 
     <TextView
         android:id="@+id/internet_hilang"
