--- a/app/src/main/res/layout/activity_trip_schedule_detail.xml
+++ b/app/src/main/res/layout/activity_trip_schedule_detail.xml
@@ -5,31 +5,168 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.TripScheduleDetailActivity"
-    android:orientation="vertical">
-
+    android:orientation="vertical"
+    android:gravity="center"
+    android:layout_margin="16dp">
     <TextView
-        android:id="@+id/txtNamaBus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Nama Agency"/>
+        android:text="Detail Perjalanan"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="12dp"
+        app:cardCornerRadius="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/txtKodeBus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Kode Bus"
+                    android:layout_weight="1"
+                    android:gravity="left"
+                    android:textStyle="bold"
+                    android:textSize="18dp"/>
+                <TextView
+                    android:id="@+id/txtFare"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Fare"
+                    android:gravity="right"
+                    android:layout_weight="1"
+                    android:textStyle="bold"
+                    android:textSize="16dp"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:weightSum="2">
+                <TextView
+                    android:id="@+id/txtTripDate"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Trip Date"
+                    android:gravity="left"
+                    android:layout_weight="1"/>
+                <TextView
+                    android:id="@+id/txtAvailableSeats"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Available Seats"
+                    android:layout_weight="1"
+                    android:gravity="right"/>
+            </LinearLayout>
+            <TextView
+                android:id="@+id/txtNamaBus"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nama Bus"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/txtFrom"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Dari Mana"/>
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginRight="5dp"
+                    android:layout_marginLeft="5dp"
+                    android:text=">"/>
+                <TextView
+                    android:id="@+id/txtTo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Ke mana"/>
+            </LinearLayout>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
     <TextView
-        android:id="@+id/txtKodeBus"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Kode Bus"/>
-    <TextView
-        android:id="@+id/txtFrom"
+        android:text="Detail Kontak"
+        android:textSize="20dp"
+        android:textStyle="bold"/>
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="From"/>
-    <TextView
-        android:id="@+id/txtTo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="To"/>
-    <Button
-        android:id="@+id/btnPesanTiket"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Pesan"/>
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="12dp"
+        app:cardCornerRadius="10dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_margin="10dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nama Lengkap"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="nama lengkap"
+                android:textAllCaps="true"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="12dp"
+                android:id="@+id/tvNamaLengkap"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Alamat Email"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="alamat email"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="8dp"
+                android:id="@+id/tvAlamatEmail"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Nomor Telepon"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textStyle="bold"
+                android:text="nomor telepon"
+                android:layout_marginTop="2dp"
+                android:layout_marginBottom="8dp"
+                android:id="@+id/tvNoTelepon"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pastikan informasi tiket sudah sesuai dengan yang anda pilih dan data diri sudah sesuai dengan data yang anda miliki"
+                android:textSize="11dp"
+                android:layout_marginBottom="16dp"/>
+            <Button
+                android:id="@+id/btnPesanTiket"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Pesan Sekarang"
+                android:textColor="@color/white"
+                android:background="@drawable/button_rounded"/>
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 </LinearLayout>
