--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -143,13 +143,32 @@
                             android:textSize="18dp"
                             android:textStyle="bold"
                             android:textColor="@color/black"/>
+
                         <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="50dp"
+                            android:layout_marginTop="5dp"
+                            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right"
+                            android:drawableTint="@color/black"
+                            android:gravity="center|left"
+                            android:paddingHorizontal="20dp"
+                            android:text="   Edit Profile"
+                            android:textColor="@color/black"
+                            android:textSize="15dp"
+                            android:id="@+id/tvEditProfile"/>
+
+                        <View
+                            android:layout_marginRight="20dp"
+                            android:layout_marginLeft="20dp"
+                            style="@style/Divider.Horizontal"/>
+                        <TextView
+                            android:id="@+id/tvUbahPassword"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="5dp"
                             android:gravity="center|left"
                             android:paddingHorizontal="20dp"
-                            android:text="   Perjalanan Saya"
+                            android:text="   Ubah Password"
                             android:textColor="@color/black"
                             android:textSize="15dp"
                             android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right"
@@ -159,21 +178,7 @@
                             android:layout_marginLeft="20dp"
                             style="@style/Divider.Horizontal"/>
                         <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="50dp"
-                            android:layout_marginTop="5dp"
-                            android:gravity="center|left"
-                            android:paddingHorizontal="20dp"
-                            android:text="   Pengaturan"
-                            android:textColor="@color/black"
-                            android:textSize="15dp"
-                            android:drawableRight="@drawable/ic_baseline_keyboard_arrow_right"
-                            android:drawableTint="@color/black"/>
-                        <View
-                            android:layout_marginRight="20dp"
-                            android:layout_marginLeft="20dp"
-                            style="@style/Divider.Horizontal"/>
-                        <TextView
+                            android:id="@+id/tvPusatBantuan"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="5dp"
@@ -189,6 +194,7 @@
                             android:layout_marginLeft="20dp"
                             style="@style/Divider.Horizontal"/>
                         <TextView
+                            android:id="@+id/tvTentangKami"
                             android:layout_width="match_parent"
                             android:layout_height="50dp"
                             android:layout_marginTop="5dp"
