--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -204,6 +204,7 @@
                     android:layout_marginRight="18dp"
                     android:layout_marginBottom="18dp"/>
                 <View
+                    android:id="@+id/viewPengumuman"
                     android:layout_width="match_parent"
                     android:layout_height="150dp"
                     android:layout_marginLeft="20dp"
@@ -228,6 +229,7 @@
                     android:textSize="12dp"
                     android:layout_marginTop="3dp"/>
                 <LinearLayout
+                    android:id="@+id/llPromoSaatIni"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -302,6 +304,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/llTestCovid"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal"
@@ -355,21 +358,6 @@
                                 android:layout_width="300dp"
                                 android:layout_height="150dp"
                                 android:layout_marginRight="10dp"
-                                android:background="@drawable/button_rounded"/>
-                            <View
-                                android:layout_width="300dp"
-                                android:layout_height="150dp"
-                                android:layout_marginRight="10dp"
-                                android:background="@drawable/button_rounded"/>
-                            <View
-                                android:layout_width="300dp"
-                                android:layout_height="150dp"
-                                android:layout_marginRight="10dp"
-                                android:background="@drawable/button_rounded"/>
-                            <View
-                                android:layout_width="300dp"
-                                android:layout_height="150dp"
-                                android:layout_marginRight="20dp"
                                 android:background="@drawable/button_rounded"/>
                         </LinearLayout>
                     </HorizontalScrollView>
