--- a/app/src/main/res/layout/fragment_ticket.xml
+++ b/app/src/main/res/layout/fragment_ticket.xml
@@ -6,28 +6,33 @@
     tools:context=".activity.ui.TicketFragment"
     android:layout_marginTop="8dp">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swipeRefresh"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/listTicket"
-        android:scrollbars="vertical"
-        android:background="@android:color/transparent"/>
+        android:layout_height="match_parent">
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/listTicket"
+            android:scrollbars="vertical"
+            android:background="@android:color/transparent"/>
 
-    <TextView
-        android:id="@+id/internet_hilang"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Hidupkan Koneksi Internet"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:visibility="gone"/>
+        <TextView
+            android:id="@+id/internet_hilang"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Hidupkan Koneksi Internet"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:visibility="gone"/>
 
-    <TextView
-        android:id="@+id/ticket_kosong"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Tidak punya tiket"
-        android:textSize="16sp"
-        android:gravity="center"
-        android:visibility="gone"/>
+        <TextView
+            android:id="@+id/ticket_kosong"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Tidak punya tiket"
+            android:textSize="16sp"
+            android:gravity="center"
+            android:visibility="gone"/>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </FrameLayout>
